Fixing dashboard overflow from rows

--- a/src/www/app.css
+++ b/src/www/app.css
@@ -6,6 +6,8 @@ body {
 	padding:0px;
 	padding-top:60px;
 	overflow-x:hidden;
+	max-width:100%;
+	
 }
 
 header {
@@ -15,6 +17,7 @@ header {
 	position:fixed;
 	top:0;
 	width:100%;
+
 	min-height:60px;
 	background: #3f3f3f;
 	background: -moz-linear-gradient(top, #696969 0%, #3f3f3f 100%);
@@ -95,7 +98,6 @@ header h3 {
 
 .robot-controls {
 	border-bottom:1px solid #ccc;
-	padding:10px;
 }
 
 .notifications-count {
